preloading images used in values

--- a/company.html
+++ b/company.html
@@ -28,6 +28,18 @@
 
     <!-- Template Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
+    <link rel="preload" as="image" href="./img/handshake.svg">
+<link rel="preload" as="image" href="./img/handshake1.svg">
+<link rel="preload" as="image" href="./img/approve.svg">
+<link rel="preload" as="image" href="./img/approve1.svg">
+<link rel="preload" as="image" href="./img/teamwork1.svg">
+<link rel="preload" as="image" href="./img/teamwork2.svg">
+<link rel="preload" as="image" href="./img/teamwork3.svg">
+<link rel="preload" as="image" href="./img/infinite.svg">
+<link rel="preload" as="image" href="./img/infinite1.svg">
+<link rel="preload" as="image" href="./img/health1.svg">
+<link rel="preload" as="image" href="./img/health2.svg">
+
 </head>
 
 <div>
