preloading images used in values

--- a/company.html
+++ b/company.html
@@ -400,13 +400,13 @@
         onmouseover="this.style.backgroundColor='#2c2c54'; 
                      this.querySelector('.info').style.display='block'; 
                      this.querySelector('h3').style.display='none';
-                     this.querySelector('.handshake-img').src='img/handshake1.svg';" 
+                     this.querySelector('.handshake-img').src='./img/handshake1.svg';" 
         onmouseout="this.style.backgroundColor='white'; 
                     this.querySelector('.info').style.display='none'; 
                     this.querySelector('h3').style.display='block';
-                    this.querySelector('.handshake-img').src='img/handshake.svg';">
+                    this.querySelector('.handshake-img').src='./img/handshake.svg';">
 
-    <img class="handshake-img" src="img/handshake.svg" alt="Teamwork" style="width: 50px; height: 50px;">
+    <img class="handshake-img" src="./img/handshake.svg" alt="Teamwork" style="width: 50px; height: 50px;">
     
     <h3 style="color: #6438E0; font-size: 1.4em; margin-top: 10px;">Client Commitment</h3>
 
@@ -423,13 +423,13 @@ padding-top: 60px;"
 onmouseover="this.style.backgroundColor='#2c2c54'; 
              this.querySelector('.info').style.display='block'; 
              this.querySelector('h3').style.display='none';
-             this.querySelector('.handshake-img').src='img/approve1.svg';" 
+             this.querySelector('.handshake-img').src='./img/approve1.svg';" 
 onmouseout="this.style.backgroundColor='white'; 
             this.querySelector('.info').style.display='none'; 
             this.querySelector('h3').style.display='block';
-            this.querySelector('.handshake-img').src='img/approve.svg';">
+            this.querySelector('.handshake-img').src='./img/approve.svg';">
 
-<img class="handshake-img" src="img/approve.svg" alt="Teamwork" style="width: 50px; height: 60px; ">
+<img class="handshake-img" src="./img/approve.svg" alt="Teamwork" style="width: 50px; height: 60px; ">
         <h3 style="color: #6438E0; font-size: 1.4em; margin-top: 10px;">Intergrity</h3>
         <p style="color:white; font-size: 1.4em; ">Intergrity</p>
         <div class="info" style="display: none; color: white; 
@@ -444,13 +444,13 @@ onmouseout="this.style.backgroundColor='white';
    onmouseover="this.style.backgroundColor='#2c2c54'; 
                 this.querySelector('.info').style.display='block'; 
                 this.querySelector('h3').style.display='none';
-                this.querySelector('.handshake-img').src='img/teamwork3.svg';" 
+                this.querySelector('.handshake-img').src='./img/teamwork3.svg';" 
    onmouseout="this.style.backgroundColor='white'; 
                this.querySelector('.info').style.display='none'; 
                this.querySelector('h3').style.display='block';
-               this.querySelector('.handshake-img').src='img/teamwork2.svg';">
+               this.querySelector('.handshake-img').src='./img/teamwork2.svg';">
 
-<img class="handshake-img" src="img/teamwork1.svg" alt="Teamwork" style="width: 50px; height: 50px; ">
+<img class="handshake-img" src="./img/teamwork1.svg" alt="Teamwork" style="width: 50px; height: 50px; ">
 <h3 style="color: #6438E0; font-size: 1.4em; margin-top: 10px;">Teamwork</h3>
 <div class="info" style="display: none; background-color: #2c2c54; color: white; 
                    margin-top: 10px; border-radius: 5px; width: 80%; text-align: center;">
@@ -464,13 +464,13 @@ padding-top: 10px;"
 onmouseover="this.style.backgroundColor='#2c2c54'; 
              this.querySelector('.info').style.display='block'; 
              this.querySelector('h3').style.display='none';
-             this.querySelector('.handshake-img').src='img/infinite1.svg';" 
+             this.querySelector('.handshake-img').src='./img/infinite1.svg';" 
 onmouseout="this.style.backgroundColor='white'; 
             this.querySelector('.info').style.display='none'; 
             this.querySelector('h3').style.display='block';
-            this.querySelector('.handshake-img').src='img/infinite.svg';">
+            this.querySelector('.handshake-img').src='./img/infinite.svg';">
 
-<img class="handshake-img" src="img/infinite.svg" alt="Teamwork" style="width: 50px; height: 50px;">
+<img class="handshake-img" src="./img/infinite.svg" alt="Teamwork" style="width: 50px; height: 50px;">
 <h3 style="color: #6438E0; font-size: 1.4em; margin-top: 10px;">Versatility</h3>
 <div class="info" style="display: none; background-color: #2c2c54; color: white; 
                    margin-top: 10px; border-radius: 5px; width: 80%; text-align: center;">
@@ -485,13 +485,13 @@ padding-top: 10px;"
 onmouseover="this.style.backgroundColor='#2c2c54'; 
              this.querySelector('.info').style.display='block'; 
              this.querySelector('h3').style.display='none';
-             this.querySelector('.handshake-img').src='img/health2.svg';" 
+             this.querySelector('.handshake-img').src='./img/health2.svg';" 
 onmouseout="this.style.backgroundColor='white'; 
             this.querySelector('.info').style.display='none'; 
             this.querySelector('h3').style.display='block';
-            this.querySelector('.handshake-img').src='img/health1.svg';">
+            this.querySelector('.handshake-img').src='./img/health1.svg';">
 
-<img class="handshake-img" src="img/health1.svg" alt="Teamwork" style="width: 50px; height: 50px; ">
+<img class="handshake-img" src="./img/health1.svg" alt="Teamwork" style="width: 50px; height: 50px; ">
 <h3 style="color: #6438E0; font-size: 1.4em; margin-top: 10px;">Wellbeing</h3>
 
   <div class="info" style="display: none; background-color: #2c2c54; color: white; 
