--- a/company.html
+++ b/company.html
@@ -87,7 +87,7 @@
         <div class="navbar-nav ms-auto py-0 text-center" style="display: flex; align-items: center;">
             <a class="underlinepage pageam nav-item nav-link d-flex align-items-center" href="knowledge.html" style="color: #65CFE9; font-weight: bold; font-family: Arial, Helvetica, sans-serif; padding: 5px;">
                 <img src="https://img.icons8.com/emoji/48/null/light-bulb-emoji.png" alt="Knowledge Center Icon" width="20" height="20" style="margin-right: 8px;">
-                Talent Portal
+                Talents Portal
             </a>
         </div>
     </div>
@@ -193,7 +193,7 @@
     margin: auto;
     padding-left: 6%;
     padding-right: 6%;
-    padding-top: 60px;
+    padding-top: 20px;
     overflow: hidden;
 }
 
@@ -430,7 +430,7 @@ onmouseout="this.style.backgroundColor='white';
             this.querySelector('.handshake-img').src='./img/approve.svg';">
 
 <img class="handshake-img" src="./img/approve.svg" alt="Teamwork" style="width: 50px; height: 60px; ">
-        <h3 style="color: #6438E0; font-size: 1.4em; margin-top: 10px;">Intergrity</h3>
+        <h3 style="color: #6438E0; font-size: 1.4em; ">Intergrity</h3>
         <p style="color:white; font-size: 1.4em; ">Intergrity</p>
         <div class="info" style="display: none; color: white; 
                            border-radius: 5px; width: 80%; text-align: center;">
@@ -585,7 +585,7 @@ onmouseout="this.style.backgroundColor='white';
         
    
 
-      <div style="display: flex; align-items: center; justify-content: space-between; padding: 40px 6% 10px; background-color: white;">
+      <div style="display: flex; align-items: center; justify-content: space-between; padding: 20px 6%; background-color: white;">
         <p style="font-size: 40px; color: rgb(22, 22, 68); font-weight: 900 !important; text-shadow: 1px 1px 0 rgb(22, 22, 68), -1px -1px 0 rgb(22, 22, 68), 1px -1px 0 rgb(22, 22, 68), -1px 1px 0 rgb(22, 22, 68); margin: 0;">
             Testimonials
         </p>
