--- a/consulting.html
+++ b/consulting.html
@@ -75,7 +75,7 @@
         <div class="navbar-nav ms-auto py-0 text-center" style="display: flex; align-items: center;">
             <a class="underlinepage pageam nav-item nav-link d-flex align-items-center" href="knowledge.html" style="color: #65CFE9; font-weight: bold; font-family: Arial, Helvetica, sans-serif; padding: 5px;">
                 <img src="https://img.icons8.com/emoji/48/null/light-bulb-emoji.png" alt="Knowledge Center Icon" width="20" height="20" style="margin-right: 8px;">
-                Talent Portal
+                Talents Portal
             </a>
         </div>
     </div>
