--- a/company.html
+++ b/company.html
@@ -250,6 +250,9 @@
             cursor: pointer;
             font-size: 16px;
         }
+        body {
+        cursor: default !important;
+    }
 
 </style>
 
