cursor default for all images

--- a/index.html
+++ b/index.html
@@ -84,6 +84,9 @@
 
 <!-- Custom CSS to show background change on click and overlay effect -->
 <style>
+          body {
+        cursor: default !important;
+    }
     /* When the navbar toggle button is clicked, change the background color */
     .navbar-toggler.collapsed {
         background-color: black; /* Blue background on click */
