--- a/analytics.html
+++ b/analytics.html
@@ -364,7 +364,7 @@
     </div>
 </div>
 <!-- Footer Start -->
-<div class="container-fluid text-secondary p-5" style="background-color: #000;">
+<div class="container-fluid text-secondary p-5" style="background-color: #000;padding-bottom: 0px !important;">
     <div class="row g-5">
         <!-- Left Section -->
         <div class="col-lg-6 text-white"  style="padding-right: 2%;">
@@ -399,7 +399,7 @@
 </div>
 
 
-<div class="container-fluid text-secondary p-5" style="background-color: #000;">
+<div class="container-fluid text-secondary p-5" style="background-color: #000;padding-top: 20px !important;">
     <div class="row g-5">
         <div class="col-lg-3 col-md-6">
             <h3 style="color: #65CFE9;">How We Can Help</h3>
