--- a/index.html
+++ b/index.html
@@ -611,7 +611,7 @@
             </div>
         </form>
         <div style="text-align: center; margin-top: 30px; font-size: 40px; font-weight: bold; color: rgb(22, 22, 68); font-weight: 900 !important; text-shadow: 1px 1px 0  rgb(22, 22, 68), -1px -1px 0  rgb(22, 22, 68), 1px -1px 0  rgb(22, 22, 68), -1px 1px 0  rgb(22, 22, 68);">
-            Quotation: <span id="quotationValue">0</span>
+            Quotation: <span id="quotationValue">0</span> Kes
         </div>
     </div>
 </div>
@@ -632,7 +632,7 @@
     <!-- Blog End -->
  <!-- Footer Start -->
 <!-- Footer Start -->
-<div class="container-fluid text-secondary p-5" style="background-color: #000;">
+<div class="container-fluid text-secondary p-5" style="background-color: #000;padding-bottom: 0px !important;">
     <div class="row g-5">
         <!-- Left Section -->
         <div class="col-lg-6 text-white"  style="padding-right: 2%;">
@@ -667,7 +667,7 @@
 </div>
 
 
-<div class="container-fluid text-secondary p-5" style="background-color: #000;">
+<div class="container-fluid text-secondary p-5" style="background-color: #000;padding-top: 20px !important;">
     <div class="row g-5">
         <div class="col-lg-3 col-md-6">
             <h3 style="color: #65CFE9;">How We Can Help</h3>
