--- a/stratergy.html
+++ b/stratergy.html
@@ -335,7 +335,7 @@
  <!-- Footer Start -->
 <!-- Footer Start -->
 
-<div class="container-fluid text-secondary p-5" style="background-color: #000;">
+<div class="container-fluid text-secondary p-5" style="background-color: #000;padding-bottom: 0px !important;">
     <div class="row g-5">
         <!-- Left Section -->
         <div class="col-lg-6 text-white">
@@ -368,7 +368,7 @@
 </div>
 
 
-<div class="container-fluid text-secondary p-5" style="background-color: #000;">
+<div class="container-fluid text-secondary p-5" style="background-color: #000;padding-top: 20px !important;">
     <div class="row g-5">
         <div class="col-lg-3 col-md-6">
             <h3 style="color: #65CFE9;">How We Can Help</h3>
