--- a/why.html
+++ b/why.html
@@ -412,7 +412,7 @@
 <!-- Footer Start -->
 
 
-<div class="container-fluid text-secondary p-5" style="background-color: #000;">
+<div class="container-fluid text-secondary p-5" style="background-color: #000;padding-bottom: 0px !important;">
     <div class="row g-5">
         <!-- Left Section -->
         <div class="col-lg-6 text-white"  style="padding-right: 2%;">
@@ -447,7 +447,7 @@
 </div>
 
 
-<div class="container-fluid text-secondary p-5" style="background-color: #000;">
+<div class="container-fluid text-secondary p-5" style="background-color: #000;padding-top: 20px !important;">
     <div class="row g-5">
         <div class="col-lg-3 col-md-6">
             <h3 style="color: #65CFE9;">How We Can Help</h3>
