scroll anniucemtn topbar and chnage font size and weight in talents portal and cusor to pinter in talentportal

--- a/index.html
+++ b/index.html
@@ -611,7 +611,7 @@
             </div>
         </form>
         <div style="text-align: center; margin-top: 30px; font-size: 40px; font-weight: bold; color: rgb(22, 22, 68); font-weight: 900 !important; text-shadow: 1px 1px 0  rgb(22, 22, 68), -1px -1px 0  rgb(22, 22, 68), 1px -1px 0  rgb(22, 22, 68), -1px 1px 0  rgb(22, 22, 68);">
-            Quotation: <span id="quotationValue">0</span> Kes
+            Quotation Kes: <span id="quotationValue">0</span>
         </div>
     </div>
 </div>
