--- a/knowledge.html
+++ b/knowledge.html
@@ -45,7 +45,7 @@
             cursor: pointer;
             position: relative;
             z-index: 2;">
-            Annoucement
+            Important Notice
         </button>
     
         <!-- Scrolling Text Wrapper -->
@@ -641,6 +641,7 @@ body {
                         <a class="text-secondary mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Careers</a>
                         <a class="text-secondary" href="contact.html"><i class="bi bi-arrow-right text-primary me-2"></i>Contact</a>
                         <a class="text-secondary" href="index.html#our-solutions"><i class="bi bi-arrow-right text-primary me-2"></i>Solutions</a>
+                        <a class="text-secondary" href="terms.html"><i class="bi bi-arrow-right text-primary me-2"></i>Terms and condition</a>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6" >
