--- a/analytics.html
+++ b/analytics.html
@@ -441,12 +441,15 @@
             <h3  style="color: #65CFE9;">Explore</h3>
             <div class="d-flex flex-column justify-content-start">
                 <a class="text-secondary mb-2" href="why.html"><i class="bi bi-arrow-right text-primary me-2"></i>Why Freed</a>
-                <a class="text-secondary mb-2" href="knowledge.html"><i class="bi bi-arrow-right text-primary me-2"></i>Knowledge Center</a>
                 <a class="text-secondary mb-2" href="company.html"><i class="bi bi-arrow-right text-primary me-2"></i>company</a>
+                <a class="text-secondary mb-2" href="knowledge.html"><i class="bi bi-arrow-right text-primary me-2"></i>Talents Portal</a>
+         
                 <a class="text-secondary mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Careers</a>
-                <a class="text-secondary" href="contact.html"><i class="bi bi-arrow-right text-primary me-2"></i>Contact</a>
-                <a class="text-secondary" href="index.html#our-solutions"><i class="bi bi-arrow-right text-primary me-2"></i>Solutions</a>
-                <a class="text-secondary" href="terms.html"><i class="bi bi-arrow-right text-primary me-2"></i>Terms and condition</a>
+                <a class="text-secondary" href="contact.html"><i class="bi bi-arrow-right text-primary me-2"></i>Contact us</a>
+
+                <a class="text-secondary" href="terms.html"><i class="bi bi-arrow-right text-primary me-2"></i>Terms & condition</a>
+                
+                <a class="text-secondary" href="privacy.html"><i class="bi bi-arrow-right text-primary me-2"></i>Privacy Policy</a>
             </div>
         </div>
         <div class="col-lg-3 col-md-6" >
