--- a/knowledge.html
+++ b/knowledge.html
@@ -44,6 +44,7 @@
             margin-right: 10px; 
             cursor: pointer;
             position: relative;
+            border-radius: 5px;
             z-index: 2;">
             Important Notice
         </button>
@@ -276,6 +277,7 @@ input:required,
 select:required  {
     border: 2px solid rgba(0, 0, 0, 0.5) !important;
     outline: none !important;
+    border-radius: 5px;
    
 }
 
@@ -563,7 +565,7 @@ body {
     </div>
 </div>
         <!-- Repeat similar blocks for other questions -->
-        <div class="upload-section" style="border: 2px dashed black;  height: 80px; display: flex; justify-content: center; align-items: center; text-align: center; width: 95%; margin: 0 auto;cursor: pointer !important;padding-bottom: 20px;">
+        <div class="upload-section" style="border: 2px dashed black;  height: 80px; display: flex; justify-content: center; align-items: center; text-align: center; width: 95%; margin: 0 auto;cursor: pointer !important;">
             <p>Upload Your CV (PDF Only)</p>
         </div>
 
@@ -601,8 +603,8 @@ body {
                   
                     <form class="mx-auto">
                         <div class="input-group">
-                            <input type="text" class="form-control border-white p-3" placeholder="Your Email" style="border-radius: 0px;">
-                            <button class="btn btn-dark px-4 " style="color: #65CFE9;border-radius: 0px !important;" >Sign Up</button>
+                            <input type="text" class="form-control border-white p-3" placeholder="Your Email" style="border-top-left-radius: 5px;border-bottom-left-radius: 5px;">
+                            <button class="btn btn-dark px-4 " style="color: #65CFE9;border-top-right-radius: 5px;border-bottom-right-radius: 5px;" >Sign Up</button>
                             
                         </div>
                         <a href="https://www.linkedin.com" target="_blank" style="text-decoration: none; display: flex; align-items: center; gap: 5px;border-radius: 0px;padding-top: 10px;">
