--- a/privacy.html
+++ b/privacy.html
@@ -222,8 +222,8 @@
           
             <form class="mx-auto" style="max-width: 600px;">
                 <div class="input-group">
-                    <input type="text" class="form-control border-white p-3" placeholder="Your Email">
-                    <button class="btn btn-dark px-4 " style="color: #65CFE9;" >Sign Up</button>
+                    <input type="text" class="form-control border-white p-3" placeholder="Your Email" style="border-top-left-radius: 5px;border-bottom-left-radius: 5px;">
+                    <button class="btn btn-dark px-4 " style="color: #65CFE9;border-top-right-radius: 5px;border-bottom-right-radius: 5px;" >Sign Up</button>
                 </div>
             </form>
             <!-- LinkedIn Section -->
