making the site responsive

--- a/analytics.html
+++ b/analytics.html
@@ -34,10 +34,21 @@
    
     <!-- Topbar End -->
   <!-- Topbar End -->
+
+  <style>
+    @media (max-width: 768px) {
+    .important-notice-btn {
+        padding: 1px; /* Reduce padding */
+        font-size: 10px; /* Reduce font size */
+        border-radius: 3px; /* Adjust border radius */
+    }
+}
+
+  </style>
   <div id="topBannerWrapper" style="overflow: hidden; position: relative; width: 100%; background-color: aquamarine; padding: 10px; display: flex; align-items: center;">
     
     <!-- Fixed "READ MORE" Button -->
-    <button class="watch-now-btn" style="
+    <button class="watch-now-btn important-notice-btn" style="
         background-color: #451885; 
         color: white; 
         border: none; 
